#41 Made keyboard instructions button reachable in tab order, pressing space/enter while focused on button will open a dialog for sighted users, button itself is aria-labeled with instructions for unsighted users. Added new rules for applying 'inert' to all relevant elements on the page for better control over tab order when questions are selected/instructions are visible/etc. Added question text to tab order so unsighted users can reach it to read again. Simplified tab order for answer options so that each option is only a single stop in the order instead of two. Added a listener for the 'Escape' key to the question dialog so it's easier to exit. Added score wheel/questions remaining element to tab order and adjusted layout of elements to prevent extraneous readings of the widget title. Adjusted behavior when submitting answers to auto-focus the 'Return' button instead of expecting users to do it. Added visual effects to most elements on the page to indicate when they have focus so sighted keyboard users can tell where they are. Added an invisible-until-focused element to the game board to move focus from the bottom back to the top so keyboard users don't have to tab back through the whole list.

--- a/src/creator.scss
+++ b/src/creator.scss
@@ -925,7 +925,7 @@ input[type=checkbox]:checked + label.checktoggle {
 					// font-weight: bold;
 					border: solid 1px #8b8989;
 				}
-	
+
 				&.feedbackChoiceBox {
 					width: 170px;
 					height: 50px;
@@ -1033,6 +1033,8 @@ input[type=checkbox]:checked + label.checktoggle {
 				&:before {
 					position: absolute;
 					content: 'WRONG';
+					top: 50%;
+					transform: translateY(-50%);
 				}
 			}
 		}
