--- a/src/player.scss
+++ b/src/player.scss
@@ -58,6 +58,19 @@ html, body {
 	        user-select: none;
 }
 
+.invisible-until-focused {
+	opacity: 0;
+	height: 0;
+	width: 0;
+	pointer-events: none;
+
+	&:focus {
+		opacity: 1;
+		height: auto;
+		width: auto;
+	}
+}
+
 header {
 	position: fixed;
 	top: 0;
@@ -75,9 +88,9 @@ header {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='${blue}', endColorstr='${dblue}',GradientType=0 );
 
 	h1 {
-		line-height: 90px;
-		height: 90px;
-		margin: 0;
+		line-height: 50px;
+		height: 50px;
+		margin: 25px 0 0;
 		padding: 0;
 		margin-left: 14px;
 		position: absolute;
@@ -89,6 +102,10 @@ header {
 			display: inline-block;
 			line-height: normal;
 			vertical-align: middle
+		}
+		&:focus {
+			text-shadow: 0 0 4px #ccc;
+			text-decoration: underline;
 		}
 	}
 	.score {
@@ -126,15 +143,19 @@ header {
 			// so full circle will show up in IE9
 			overflow: visible !important;
 		}
+		&:focus {
+			border-radius: 50%;
+			box-shadow: 0 0 4px 4px #ccc;
+		}
 	}
-	.menu {
+	.divider {
 		background-color: #4d5355;
 		height: 25px;
 		position: absolute;
 		top: 90px;
 		width: 100%;
-		padding-right: 10px;
-		text-align: right;
+		padding-left: 10px;
+		text-align: left;
 		@include boxSizing();
 		color: #8f979a;
 		font-size: 15px;
@@ -161,6 +182,10 @@ header {
 			margin: 15px 5px 0 0;
 			position: relative;
 			min-height: 20px;
+
+			&:focus {
+				box-shadow: 0 0 4px 4px #ccc;
+			}
 
 			&:after {
 				content: '';
@@ -261,12 +286,18 @@ header {
 			}
 		}
 	}
+
+	.invisible-until-focused:focus {
+		background: #eff0f2;
+		border: 3px solid #697393;
+		padding: 20px 10px;
+	}
 }
 
 #t-question-page:focus {
-			border: 2px solid #1793ff;
-    		box-shadow: 0 0 10px #1793ff;
-		}
+	border: 2px solid #1793ff;
+	box-shadow: 0 0 10px #1793ff;
+}
 
 .question-popup-bg {
 	position: fixed;
@@ -330,11 +361,20 @@ header {
 		background: #eff0f2;
 		padding: 20px 10px;
 		border: 3px solid #697393;
+
+		&:focus-within {
+			background: #fff;
+			box-shadow: 0 0 4px 4px #ccc;
+		}
 	}
 
 	.question-text {
 		flex-grow: 2;
 		padding-right: 5px;
+
+		&:focus {
+			text-decoration: underline;
+		}
 	}
 
 	.media {
@@ -350,6 +390,10 @@ header {
 
 		img {
 			object-fit: contain;
+
+			&:focus {
+				box-shadow: 0 0 4px 4px #ccc;
+			}
 		}
 
 		figure {
@@ -361,6 +405,15 @@ header {
 			overflow: hidden;
 			text-align: center;
 			height: 25px;
+		}
+
+		audio:focus-within {
+			border-radius: 30px;
+
+			&:focus,
+			&:focus-within {
+				box-shadow: 0 0 4px 4px #ccc;
+			}
 		}
 	}
 
@@ -383,7 +436,8 @@ header {
 
 		cursor: pointer;
 
-		&:hover {
+		&:hover,
+		&:focus {
 			background-color: #eff0f2;
 			color: #2f3944;
 		}
@@ -570,7 +624,8 @@ header {
 
 			cursor: pointer;
 
-			&:hover {
+			&:hover,
+			&:focus {
 				background: #6c6c6c;
 			}
 		}
@@ -593,6 +648,10 @@ header {
 			position: relative;
 			display: block;
 			margin: 20px auto 0 auto;
+
+			&:focus {
+				box-shadow: 0 0 4px 4px #ccc;
+			}
 		}
 
 		.lightbox-image:hover {
@@ -775,12 +834,12 @@ header {
 /* this is a class created on webaim to hide content from sighted users while allowed
  content to be seen by screen readers */
 .clip {
-clip: rect(1px, 1px, 1px, 1px);
-clip-path: inset(50%);
-height: 1px;
-width: 1px;
-margin: -1px;
-overflow: hidden;
-padding: 0;
-position: absolute;
+	clip: rect(1px, 1px, 1px, 1px);
+	clip-path: inset(50%);
+	height: 1px;
+	width: 1px;
+	margin: -1px;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
 }
